# flownode-webassembly

./: .gitignore  .vercelignore  Cargo.toml  MASTER.md  README.md  Trunk.toml  index.html  vercel.json
assets/: manifest.json
docs/: DEVELOPMENT_PLAN.md  FORMAT_COMPATIBILITY.md  REACT_SPEC.md
memory/: egui-node-graph-research.md  image-editing-architecture.md  research-rust-wasm-deployment.md  wgpu-wasm-image-processing.md
src/: app.rs  cloud.rs  compat.rs  executor.rs  gpu.rs  graph.rs  image_data.rs  main.rs  nodes.rs  ui_components.rs
src/shaders/: blur.wgsl  brightness_contrast.wgsl  hue_saturation.wgsl
