[package]
name = "flownode_canvas"
version = "0.1.0"
edition = "2021"
authors = ["Designco Agency <hello@designco.agency>"]
description = "FlowNode.io v2 - Full Rust/Wasm canvas-based node editor"
repository = "https://github.com/designco-agency/flownode-canvas"
license = "MIT"

[dependencies]
# Core GUI framework - immediate mode, blazing fast
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",          # OpenGL backend (wider compatibility)
    "persistence",   # Save app state
] }
egui = "0.30"
egui_extras = { version = "0.30", features = ["all_loaders", "image"] }

# Note: egui_node_graph was yanked, using custom implementation in graph.rs
# Alternative options: egui_node_editor, egui_node_graph2, egui-graph-edit

# Image processing
image = "0.25"

# Async runtime for image processing
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for node identification
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native file dialogs
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size in WASM
